<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardElevation="5dp"
    android:id="@+id/c1">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:id="@+id/ll1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/hostel_type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrollment_no"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_name"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_no"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent_contact_no"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".5"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/room_no"
                android:text="@string/hostel_type"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/enroll_no"
                android:layout_height="wrap_content"
                android:text="@string/enrollment_no"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/std_name"
                android:text="@string/student_name"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/branch"
                android:text="@string/department"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/year"
                android:text="@string/semester"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:text="@string/email_id"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contact_no"
                android:text="@string/contact_no"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/e_contact_no"
                android:text="@string/parent_contact_no"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:text="@string/address"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>